@@ -3,6 +3,7 @@ BEEBEEP (Secure Lan Messanger)
 BeeBEEP 2.0.4
 - Some GUI improvements (new icons, file sharing tree load faster)
 - Always Beep on new message arrived option added
+- Favorite users (right click on user and enable star button)
 
 BeeBEEP 2.0.3
 - Fixed shared folder tree
